[tool.poetry]
name = "FastRenDer"
version = "0.1.0"
description = "To renDer pages."
authors = ["OlshaMB <michaelolshanskiy@icloud.com>"]
license = "MIT"
readme = "README.md"
[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
