[tool.poetry]
name = "FastRenDer"
version = "0.1.1"
description = "To renDer pages."
authors = ["OlshaMB <olshamisha@gmail.ocom>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/OlshaMB/renDer"
repository = "https://github.com/OlshaMB/renDer"
[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.scripts]
tests = 'test:main'